--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/png" href="/fav.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title></title>
-    <script src="//code.jivosite.com/widget/4fE1TZXzgH" async></script>
+    <script src="//code.jivosite.com/widget/NJMZh9Bn97" async></script>
   </head>
   <body>
     <div id="root"></div>
