--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <link rel="icon" type="image/png" href="/fav.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title></title>
-    <!-- <script src="//code.jivosite.com/widget/NJMZh9Bn97" async></script> -->
+    <script
+      src="//code.tidio.co/mfryrnmvysbmr8lwingmomqwqgcmcdla.js"
+      async
+    ></script>
   </head>
   <body>
     <div id="root"></div>
