--- a/index.html
+++ b/index.html
@@ -9,9 +9,27 @@
       src="//code.tidio.co/mfryrnmvysbmr8lwingmomqwqgcmcdla.js"
       async
     ></script>
+
+    <style>
+     
+ #google_translate_element { height: 26px !important; overflow: hidden !important; }
+    </style>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+        <script type="text/javascript">
+      function googleTranslateElementInit() {
+        new google.translate.TranslateElement(
+          { pageLanguage: 'en' },
+          'google_translate_element'
+        );
+      }
+    </script>
+
+    <script
+      type="text/javascript"
+      src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"
+    ></script>
   </body>
 </html>
